<resources>
    <string name="app_name">Calculate</string>
    <string name="enter_math">Enter you forms</string>
    <string name="answer">your answer</string>

    <!--    hello world!!!      -->
    <string name="btn_welcome">Hello World!!!</string>

    <!--    name button main    -->
    <string name="btn_calculate_std">Engineering calculator</string>
    <string name="btn_calculate_pol">Polish calculator</string>
    <string name="btn_calculate_spol">Polish scientific calculator</string>

    <!--    Game Snake      -->
    <string name="btn_snake">Snake game</string>

    <!--    name button second     -->
    <string name="num_0">0</string>
    <string name="num_1">1</string>
    <string name="num_2">2</string>
    <string name="num_3">3</string>
    <string name="num_4">4</string>
    <string name="num_5">5</string>
    <string name="num_6">6</string>
    <string name="num_7">7</string>
    <string name="num_8">8</string>
    <string name="num_9">9</string>
    <string name="btn_float">,</string>

    <string name="btn_ac">AC</string>
    <string name="btn_c">C</string>
    <string name="btn_left">(</string>
    <string name="btn_right">)</string>
    <string name="btn_equal">=</string>
    <string name="btn_plus">+</string>
    <string name="btn_sub">-</string>
    <string name="btn_mul">*</string>
    <string name="btn_dev">/</string>


</resources>